--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ html {
 
 h1,
 h2,
+a,
 q,
 p {
   margin: 0;
@@ -39,6 +40,11 @@ q {
 
 }
 
+a {
+  color: #34495e;
+
+
+}
 .mobile {
   display: none;
 }
