--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body {
   color: #4e4e4e;
 }
 
+img {
+  border-radius: 8px 8px 0 0;
+}
+
 h1,
 h2,
 h3,
@@ -51,6 +55,7 @@ a:hover {
 
 .box-shadow, .paralax-mf, .service-box, .work-box, .card-blog {
   box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
+  
 }
 
 .box-shadow-a, .button:hover {
@@ -727,14 +732,17 @@ a:hover {
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  
 }
 
 .about-mf .about-img {
   margin-bottom: 2rem;
+  
 }
 
 .about-mf .about-img img {
   margin-left: 10px;
+  
 }
 
 @media (min-width: 767px) {
@@ -836,15 +844,18 @@ a:hover {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background-color: #fff;
+  border-radius: 8px;
 }
 
 .work-box:hover img {
   transform: scale(1.3);
+ 
 }
 
 .work-img {
   display: block;
   overflow: hidden;
+  border-radius: 8px;
 }
 
 .work-img img {
@@ -1060,12 +1071,13 @@ a:hover {
 @media (min-width: 767px) {
   .card-blog {
     margin-bottom: 3rem;
+    border-radius: 8px;s
   }
 }
 
 .card-blog .card-body {
   position: relative;
-}
+  
 
 .card-blog .card-category-box {
   position: absolute;
@@ -1075,6 +1087,7 @@ a:hover {
   right: 15px;
   line-height: 25px;
   overflow: hidden;
+  
 }
 
 .card-blog .card-category {
@@ -1083,7 +1096,7 @@ a:hover {
   padding: 0 15px 5px;
   overflow: hidden;
   background-color: #000000;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .card-blog .card-category .category {
