--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1077,6 +1077,7 @@ a:hover {
 
 .card-blog .card-body {
   position: relative;
+
 }
 
 .card-blog .card-category-box {
@@ -1087,7 +1088,7 @@ a:hover {
   right: 15px;
   line-height: 25px;
   overflow: hidden;
-  
+  border-radius: 8px;
 
 }
 
@@ -1107,128 +1108,32 @@ a:hover {
   font-size: .7rem;
   letter-spacing: .1px;
   margin-bottom: 0;
+  border-radius: 8px;
 }
 
 .card-blog .card-title {
   font-size: 1.3rem;
   margin-top: .6rem;
+  border-radius: 8px;
 }
 
 .card-blog .card-description {
   color: #4e4e4e;
+  border-radius: 8px;
 }
 
 .card-blog .post-author {
   display: inline-block;
+  border-radius: 8px;
 }
 
 .card-blog .post-date {
   color: #4e4e4e;
   display: inline-block;
+  border-radius: 8px;
 }
 
-/*--------------------------------------------------------------
-# Blog Single
---------------------------------------------------------------*/
-.post-box,
-.form-comments,
-.box-comments,
-.widget-sidebar {
-  padding: 2rem;
-  background-color: #fff;
-  margin-bottom: 3rem;
-}
 
-@media (min-width: 768px) {
-  .post-box,
-  .form-comments,
-  .box-comments,
-  .widget-sidebar {
-    padding: 3rem;
-  }
-}
-
-.blog-wrapper .article-title {
-  font-size: 1.5rem;
-}
-
-@media (min-width: 768px) {
-  .blog-wrapper .article-title {
-    font-size: 1.9rem;
-  }
-}
-
-.blog-wrapper .post-meta {
-  margin: 1rem 0;
-}
-
-.blog-wrapper .post-meta ul {
-  border-left: 4px solid #000000;
-  margin-top: 1rem;
-}
-
-.blog-wrapper .post-meta ul li {
-  display: inline-block;
-  margin-left: 15px;
-}
-
-.blog-wrapper .post-meta ul a {
-  color: #000000;
-}
-
-.blog-wrapper .post-meta ul span {
-  color: #1e1e1e;
-}
-
-.blog-wrapper .blockquote {
-  border-left: 4px solid #000000;
-  padding: 18px;
-  font-style: italic;
-}
-
-/*------/ Comments /------*/
-.box-comments .list-comments li {
-  padding-bottom: 40px;
-}
-
-.box-comments .list-comments .comment-avatar {
-  display: table-cell;
-  vertical-align: top;
-}
-
-.box-comments .list-comments .comment-avatar img {
-  width: 80px;
-  height: 80px;
-}
-
-.box-comments .list-comments .comment-author {
-  font-size: 1.3rem;
-}
-
-@media (min-width: 768px) {
-  .box-comments .list-comments .comment-author {
-    font-size: 1.5rem;
-  }
-}
-
-.box-comments .list-comments .comment-details {
-  display: table-cell;
-  vertical-align: top;
-  padding-left: 25px;
-}
-
-.box-comments .list-comments a {
-  color: #000000;
-}
-
-.box-comments .list-comments span {
-  color: #1e1e1e;
-  font-style: italic;
-}
-
-.box-comments .comment-children {
-  margin-left: 40px;
-}
 
 /*------/ Sidebar /------*/
 .widget-sidebar .sidebar-title {
@@ -1289,6 +1194,7 @@ footer {
   background-color: #000000;
   padding: 25px 0;
   color: #fff;
+  
 }
 
 
